# pubmedr

./:  [conflicted 2].coverage  .env  .gitignore  .replit_textual_serve  Makefile  README.md  custom_cache.json  pyproject.toml
.streamlit/: config.toml
assets/: Logfire.pdn  logfire_PubMedR Costs Dashboard.json
src/pubmedr/: ai_methods.py  config.py  constants.py  data_models.py  data_store.py  gdrive.py  main.py  main_streamlit.py  main_textual.py  metapub_methods.py  streamlit_components.py  streamlit_main.py  streamlit_utils.py  utils.py
src/pubmedr/textual_components/: s1_setup.py  s2_settings.py  s3_queries.py  s4_results.py  s5_saved.py  textual_utils.py
tests/: test_ai_methods.py  test_data_models.py  test_gdrive.py  test_logfire.py  test_logfire_ai_methods.py  test_logfire_ai_methods_simple.py  test_metapub.py  test_metapub_download_pdf.py  test_metapub_methods.py  test_streamlit_code_editor.py  test_streamlit_main.py  test_tui_main.py  test_tui_s1_setup.py  test_tui_s2_settings.py  test_tui_s5_saved.py
